--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "debug": "~2.2.0",
     "express": "~4.13.4",
     "express-handlebars": "^3.0.0",
+    "jsonfile": "^2.3.1",
     "morgan": "~1.7.0",
     "nodemon": "^1.9.2",
     "react": "^15.2.1",
