--- a/package.json
+++ b/package.json
@@ -53,10 +53,11 @@
     "babel-preset-stage-2": "^6.11.0",
     "browser-sync": "^2.13.0",
     "browser-sync-webpack-plugin": "^1.1.0",
+    "css-loader": "^0.23.1",
     "eslint": "^3.0.1",
     "eslint-loader": "^1.4.1",
     "file-loader": "^0.9.0",
-    "url-loader": "^0.5.7",
+    "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
   }
