--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "body-parser": "~1.15.1",
     "cookie-parser": "~1.4.3",
+    "cookies-js": "^1.2.2",
     "debug": "~2.2.0",
     "express": "~4.13.4",
     "express-handlebars": "^3.0.0",
