--- a/package.json
+++ b/package.json
@@ -27,14 +27,14 @@
   },
   "homepage": "https://github.com/orYoffe/Chat#readme",
   "dependencies": {
-    "body-parser": "~1.15.1",
+    "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.3",
     "cookies-js": "^1.2.2",
     "debug": "~2.2.0",
-    "express": "~4.13.4",
+    "express": "^4.17.1",
     "express-handlebars": "^3.0.0",
     "jsonfile": "^2.3.1",
-    "morgan": "~1.7.0",
+    "morgan": "^1.9.1",
     "nodemon": "^1.9.2",
     "react": "^15.2.1",
     "react-dom": "^15.2.0",
